--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,10 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <header>
+      <%= render 'shared/nav' %>
+      <%= render 'shared/flash' %>
+    </header>
 
     <%= yield %>
   </body>
