--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -1,7 +1,7 @@
 - if user_signed_in?
   nav
     span
-      = link_to "Root", root_path
+      = link_to "Root", questions_path
 
     p
       = "Welcome #{current_user.email}"
