--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,1 +1,8 @@
-p = answer.body
+- if answer.persisted?
+  li
+    p = answer.body
+    - if current_user == answer.author
+      = link_to "Delete answer",
+                    answer_path(answer),
+                    method: :delete,
+                    data:  { confirm: "Are you sure?" }
