--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -5,7 +5,8 @@ ol
   = render @question.answers
 
 = render 'answers/form', answer: @question.answers.new
-- if current_user == @question.author
+p = current_user
+- if current_user && current_user.author_of?(@question)
   = link_to "Delete question",
                   question_path(@question),
                   method: :delete,
