--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,7 +1,7 @@
 - if answer.persisted?
   li
     p = answer.body
-    - if current_user && current_user.author_of?(answer)
+    - if current_user&.author_of?(answer)
       = link_to "Delete answer",
                     answer_path(answer),
                     method: :delete,
