--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -6,7 +6,7 @@ ol
 
 = render 'answers/form', answer: @question.answers.new
 p = current_user
-- if current_user && current_user.author_of?(@question)
+- if current_user&.author_of?(@question)
   = link_to "Delete question",
                   question_path(@question),
                   method: :delete,
