--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,8 +1,21 @@
 - if answer.persisted?
   li
     p = answer.body
-    - if current_user&.author_of?(answer)
+
+    - if user_signed_in? && current_user&.author_of?(answer)
+      = link_to "Edit answer", '#', class: 'edit-answer-link', data: { answer_id: answer.id }
+
+      = form_with model: answer, class: 'hidden', html: { id: "edit-answer-#{answer.id}" } do |form|
+        = form.label :body, 'Edited answer'
+        = form.text_area :body, cols: 40
+
+        = form.submit 'Edit the answer'
+
+      br
+
       = link_to "Delete answer",
                     answer_path(answer),
                     method: :delete,
                     data:  { confirm: "Are you sure?" }
+
+
