--- a/app/views/answers/_form.html.slim
+++ b/app/views/answers/_form.html.slim
@@ -1,8 +1,10 @@
-= render 'shared/errors', resource: @answer
+.answer-errors
+  = render 'shared/errors', resource: @answer
 
-= form_with model: [@question, answer], local: true do |form|
+= form_with model: [@question, answer] do |form|
 
   = form.label :body, 'Your answer'
+  br
   = form.text_area :body, cols: 40
-
+  br
   = form.submit 'Answer the question'
