--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -4,8 +4,9 @@ p = @question.body
 ol.answers
   = render @question.answers
 
-= render 'answers/form', answer: @question.answers.new
-p = current_user
+.new-answer
+  = render 'answers/form', answer: @question.answers.new
+
 - if current_user&.author_of?(@question)
   = link_to "Delete question",
                   question_path(@question),
