--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,14 +1,15 @@
 - if answer.persisted?
-  li
-    p = answer.body
+   = tag.li data: { answer_id: answer.id }
+    p.answer-body = answer.body
 
     - if user_signed_in? && current_user&.author_of?(answer)
-      = link_to "Edit answer", '#', class: 'edit-answer-link', data: { answer_id: answer.id }
+      = link_to "Edit answer", '#', class: 'edit-answer-link'
 
       = form_with model: answer, class: 'hidden', html: { id: "edit-answer-#{answer.id}" } do |form|
-        = form.label :body, 'Edited answer'
+        = form.label :body, 'Edited answer:'
+        br
         = form.text_area :body, cols: 40
-
+        br
         = form.submit 'Edit the answer'
 
       br
