--- a/app/views/answers/_form.html.slim
+++ b/app/views/answers/_form.html.slim
@@ -3,7 +3,7 @@
 
 = form_with model: [@question, answer] do |form|
 
-  = form.label :body, 'Your answer'
+  = form.label :body, 'New answer:'
   br
   = form.text_area :body, cols: 40
   br
