--- a/app/views/shared/_errors.html.slim
+++ b/app/views/shared/_errors.html.slim
@@ -1,5 +1,5 @@
 - if resource&.errors.present?
   b = "#{resource.errors.count} error(s) detected: "
-  ul
+  ul.alert.alert-danger
     -resource.errors.full_messages.each do |message|
       li = message
