--- a/app/views/answers/update.js.erb
+++ b/app/views/answers/update.js.erb
@@ -2,7 +2,7 @@ $('.answer-errors').html('<%= render 'shared/errors', resource: @answer %>');
 
 <% if !@answer.errors.present? %>
   answerId = '<%= @answer.id %>';
-  $answerBodyText = $(`[data-answer-id=${answerId}]`);
+  $answerBodyText = $(`[data-answer-id=${answerId}] .answer-body`);
 
   $(`[data-answer-id=${answerId}] .answer-body`).text('<%= @answer.body %>');
   $(`[data-answer-id=${answerId}] .edit-answer-link`).show();
