--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -2,7 +2,15 @@
 
 = form_with model: @question, local: true do |f|
   = f.label :title
+  br
   = f.text_field :title
+  br
   = f.label :body
+  br
   = f.text_area :body
-  = f.submit 'Ask'
+  br
+  = f.label :files
+  br
+  = f.file_field :files, multiple: true
+  br
+  = f.submit 'Ask', class: 'btn btn-primary mt-2'
