--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -4,6 +4,11 @@
 .question
   h4.question-title = @question.title
   p.question-body = @question.body
+
+  - if @question.files.attached?
+    - @question.files.each do |file|
+      p = link_to file.filename.to_s, url_for(file)
+
   - if current_user&.author_of?(@question)
     = link_to 'Edit question', '#', class: 'edit-question-link'
 
