added feature for adding files while editing question

--- a/app/views/questions/update.js.erb
+++ b/app/views/questions/update.js.erb
@@ -12,4 +12,20 @@ $('.question-errors').html('<%= render 'shared/errors', resource: @question %>')
 
   editQuestionLink.classList.remove('hidden');
   editQuestionForm.classList.add('hidden');
+
+  $fileBlock = $('#question_files');
+  $fileBlock.replaceWith($fileBlock.val('').clone(true));
+
+  <% if @question.files.attached? %>
+    filesBlock = document.querySelector('.question-files');
+    $(filesBlock).html('');
+
+    <% @question.files.each do |file| %>
+      fileBlock = document.createElement('p');
+      fileBlock.classList.add('question-file');
+      $(fileBlock).html('<%= link_to file.filename.to_s, url_for(file) %>');
+
+      filesBlock.appendChild(fileBlock);
+    <% end %>
+  <% end %>
 <% end %>
