--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -4,6 +4,6 @@ $('.answer-errors').html('<%= render 'shared/errors', resource: @answer %>');
   $('.answers').append('<%= j render @answer %>');
   $('.new-answer #answer_body').val('');
 
-  fileField = $('#answer_files');
-  fileField.replaceWith(fileField.val('').clone(true));
+  $fileField = $('#answer_files');
+  $fileField.replaceWith($fileField.val('').clone(true));
 <% end %>
