--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -7,7 +7,8 @@
 
   - if @question.files.attached?
     - @question.files.each do |file|
-      p = link_to file.filename.to_s, url_for(file)
+      .question-files
+        p.question-file = link_to file.filename.to_s, url_for(file)
 
   - if current_user&.author_of?(@question)
     = link_to 'Edit question', '#', class: 'edit-question-link'
@@ -21,7 +22,11 @@
       br
       = form.text_area :body, cols: 40, class: 'question-body'
       br
-      = form.submit 'Edit the question'
+      = form.label :files
+      br
+      = form.file_field :files, multiple: true
+      br
+      = form.submit 'Edit the question', class: 'btn btn-primary mt-2'
     br
     = link_to "Delete question",
                   question_path(@question),
