--- a/app/views/answers/_form.html.slim
+++ b/app/views/answers/_form.html.slim
@@ -8,4 +8,4 @@
   br
   = form.file_field :files, multiple: true
   br
-  = form.submit 'Answer the question', class: 'mt-2 btn btn-primary'
+  = form.submit 'Answer the question', class: 'mt-2 mb-2 btn btn-primary'
