--- a/app/views/answers/update.js.erb
+++ b/app/views/answers/update.js.erb
@@ -18,7 +18,9 @@ $('.answer-errors').html('<%= render 'shared/errors', resource: @answer %>');
     <% @answer.files.each do |file| %>
       singleFileBlock = document.createElement('p');
       singleFileBlock.classList.add('answer-file');
-      $(singleFileBlock).html('<%= link_to file.filename.to_s, url_for(file) %>');
+      $(singleFileBlock).append('<%= link_to file.filename.to_s, url_for(file) %>');
+      delete_file_link = '<%= link_to '(Delete)', delete_file_answer_path(id: @answer.id, file_id: file.id), method: :delete, data: {confirm: 'Are you sure?'}, class: 'ml-1' %>';
+      $(singleFileBlock).append(delete_file_link);
 
       $($filesBlock).append(singleFileBlock);
     <% end %>
