--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -8,7 +8,9 @@
   - if @question.files.attached?
     .question-files
       - @question.files.each do |file|
-        p.question-file = link_to file.filename.to_s, url_for(file)
+        p.question-file 
+          = link_to file.filename.to_s, url_for(file)
+          = link_to '(Delete)', '#', class: 'ml-1'
 
   - if current_user&.author_of?(@question)
     = link_to 'Edit question', '#', class: 'edit-question-link'
