--- a/app/views/questions/update.js.erb
+++ b/app/views/questions/update.js.erb
@@ -18,12 +18,21 @@ $('.question-errors').html('<%= render 'shared/errors', resource: @question %>')
     $attachFileForm.replaceWith($attachFileForm.val('').clone(true));
 
     filesBlock = document.querySelector('.question-files');
-    $(filesBlock).html('');
+
+    if (filesBlock) {
+      $(filesBlock).html('');
+    } else {
+      filesBlock = document.createElement('div');
+      filesBlock.classList.add('question-files');
+      questionBody.after(filesBlock);
+    }
 
     <% @question.files.each do |file| %>
       singleFileBlock = document.createElement('p');
       singleFileBlock.classList.add('question-file');
       $(singleFileBlock).html('<%= link_to file.filename.to_s, url_for(file) %>');
+      delete_file_link = '<%= link_to '(Delete)', delete_file_question_path(id: @question.id, file_id: file.id), method: :delete, data: {confirm: 'Are you sure?'}, class: 'ml-1' %>';
+      $(singleFileBlock).append(delete_file_link);
 
       filesBlock.appendChild(singleFileBlock);
     <% end %>
