--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -10,7 +10,12 @@
       - @question.files.each do |file|
         p.question-file 
           = link_to file.filename.to_s, url_for(file)
-          = link_to '(Delete)', '#', class: 'ml-1'
+          - if current_user&.author_of?(@question)
+            = link_to '(Delete)',
+                        delete_file_question_path(id: @question.id, file_id: file.id),
+                        method: :delete,
+                        data: {confirm: 'Are you sure?'},
+                        class: 'ml-1'
 
   - if current_user&.author_of?(@question)
     = link_to 'Edit question', '#', class: 'edit-question-link'
