--- a/app/views/answers/_form.html.slim
+++ b/app/views/answers/_form.html.slim
@@ -6,6 +6,6 @@
   br
   = form.label :files
   br
-  = form.file_field :files, multiple: true
+  = form.file_field :files, multiple: true, direct_upload: true
   br
   = form.submit 'Answer the question', class: 'mt-2 mb-2 btn btn-primary'
