--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -31,7 +31,7 @@
       br
       = form.label :files
       br
-      = form.file_field :files, multiple: true
+      = form.file_field :files, multiple: true, direct_upload: true
       br
       = form.submit 'Edit the question', class: 'btn btn-primary mt-2'
     br
