--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -11,6 +11,6 @@
   br
   = f.label :files
   br
-  = f.file_field :files, multiple: true
+  = f.file_field :files, multiple: true, direct_upload: true
   br
   = f.submit 'Ask', class: 'btn btn-primary mt-2'
