added attachments controller. Attachments logic has been moved to attachments controller.

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -10,7 +10,7 @@
               = link_to file.filename.to_s, url_for(file)
               - if current_user&.author_of?(answer)
                 = link_to '(Delete)',
-                          delete_file_answer_path(id: answer.id, file_id: file.id),
+                          attachment_path(id: file.id),
                           method: :delete,
                           data: { confirm: 'Are you sure?' },
                           remote: true,
@@ -40,8 +40,8 @@
 
         br
 
-        = link_to "Delete answer",
+        = link_to 'Delete answer',
                     answer_path(answer),
                     method: :delete,
-                    data:  { confirm: "Are you sure?" },
-                    remote: true 
+                    data:  { confirm: 'Are you sure?' },
+                    remote: true
