--- a/app/views/questions/update.js.erb
+++ b/app/views/questions/update.js.erb
@@ -33,7 +33,8 @@ $('.question-errors').html('<%= render 'shared/errors', resource: @question %>')
       singleFileBlock.classList.add('question-file');
       $(singleFileBlock).attr('data-file', '<%= file.id %>');
       $(singleFileBlock).html('<%= link_to file.filename.to_s, url_for(file) %>');
-      delete_file_link = '<%= link_to '(Delete)', delete_file_question_path(id: @question.id, file_id: file.id), remote: true, method: :delete, data: {confirm: 'Are you sure?'}, class: 'ml-1' %>';
+
+      delete_file_link = '<%= link_to '(Delete)', attachment_path(id: file.id), remote: true, method: :delete, data: {confirm: 'Are you sure?'}, class: 'ml-1' %>';
       $(singleFileBlock).append(delete_file_link);
 
       filesBlock.appendChild(singleFileBlock);
