--- a/app/views/answers/update.js.erb
+++ b/app/views/answers/update.js.erb
@@ -29,7 +29,7 @@ $('.answer-errors').html('<%= render 'shared/errors', resource: @answer %>');
       singleFileBlock.classList.add('answer-file');
       $(singleFileBlock).attr('data-file', '<%= file.id %>');
       $(singleFileBlock).append('<%= link_to file.filename.to_s, url_for(file) %>');
-      delete_file_link = '<%= link_to '(Delete)', delete_file_answer_path(id: @answer.id, file_id: file.id), method: :delete, remote: true, data: {confirm: 'Are you sure?'}, class: 'ml-1' %>';
+      delete_file_link = '<%= link_to '(Delete)', attachment_path(id: file.id), method: :delete, remote: true, data: {confirm: 'Are you sure?'}, class: 'ml-1' %>';
       $(singleFileBlock).append(delete_file_link);
 
       $($filesBlock).append(singleFileBlock);
