--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -12,7 +12,7 @@
           = link_to file.filename.to_s, url_for(file)
           - if current_user&.author_of?(@question)
             = link_to '(Delete)',
-                        delete_file_question_path(id: @question.id, file_id: file.id),
+                        attachment_path(id: file.id),
                         method: :delete,
                         remote: true,
                         data: { confirm: 'Are you sure?' },
@@ -36,10 +36,10 @@
       br
       = form.submit 'Edit the question', class: 'btn btn-primary mt-2'
     br
-    = link_to "Delete question",
+    = link_to 'Delete question',
                   question_path(@question),
                   method: :delete,
-                  data:  { confirm: "Are you sure?" }
+                  data:  { confirm: 'Are you sure?' }
 
 .answer-errors
   = render 'shared/errors', resource: @answer
