--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -1,6 +1,8 @@
 = render 'shared/errors', resource: @question
 
 = form_with model: @question, local: true do |f|
+  h5 Hz
+    p lol
   = f.label :title
   br
   = f.text_field :title
@@ -12,5 +14,16 @@
   = f.label :files
   br
   = f.file_field :files, multiple: true, direct_upload: true
+  br
+  p Links:
+  .links
+    = f.fields_for :links do |link|
+      = link.label :name, 'Link name'
+      br
+      = link.text_field :name
+      br
+      = link.label :url
+      br
+      = link.text_field :url
   br
   = f.submit 'Ask', class: 'btn btn-primary mt-2'
