--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,8 @@
  *= require_self
  */
  @import "bootstrap";
+
+ body {
+  background: linear-gradient(to left, hsl(240, 55, 40) 0%, hsl(240, 50, 65) 50%, hsl(240, 25, 90) 100%);
+ }
+ 
