--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -4,10 +4,14 @@
 
     ul.links
       - answer.links.each do |link|
-        li = link_to link.name, link.url
+        - if link.gist?
+          li = link_to link.name, link.url, class: 'gist'
+        - else
+          li = link_to link.name, link.url
 
     - if user_signed_in?
       - if answer.files.attached?
+
         .answer-files
           - answer.files.each do |file|
             p.answer-file data-file=file.id
