--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -22,7 +22,10 @@
 
   .links
     - @question.links.each do |link|
-      li = link_to link.name, link.url
+      - if link.gist?
+        li = link_to link.name, link.url, class: 'gist'
+      - else
+        li = link_to link.name, link.url
 
   - if current_user&.author_of?(@question)
     hr
