--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -44,6 +44,7 @@
       br
       = form.file_field :files, multiple: true, direct_upload: true
       br
+
       p Links:
       .links
         = form.fields_for :links do |link|
@@ -74,4 +75,4 @@ ul.answers
   = render Answer.with_attached_files.sorted_answers(@question)
 
 .new-answer
-  = render 'answers/form', answer: @answer
+  = render 'answers/form'
