--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -7,7 +7,7 @@
         - if link.gist?
           li = link_to link.name, link.url, class: 'gist'
         - else
-          li = link_to link.name, link.url
+          li = link_to link.name, link.url, data: { link: link.id }
 
     - if user_signed_in?
       - if answer.files.attached?
