--- a/app/views/answers/_form.html.slim
+++ b/app/views/answers/_form.html.slim
@@ -1,4 +1,4 @@
-= form_with model: [@question, @answer] do |form|
+= form_with model: [@question, @answer], data: { type: :json }, class: 'new-answer' do |form|
 
   = form.label :body, 'New answer:'
   br
