--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -1,3 +1,16 @@
- .hidden {
-   display: none;
- }
+.hidden {
+  display: none;
+}
+
+.vote-for, .vote-against {
+  cursor: pointer;
+  transition-duration: 0.5s;
+}
+
+.vote-for:hover {
+  transform: skewX(15deg) scale(1.2);
+}
+
+.vote-against:hover {
+  transform: translateY(3px) scale(1.2);
+}
